--- a/package.json
+++ b/package.json
@@ -30,5 +30,17 @@
   "devDependencies": {
     "cross-env": "^6.0.3",
     "react-scripts": "^3.2.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
