--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/nikita-skobov/dynamic-writing#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
